
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ s_addr; } ;
struct TYPE_4__ {TYPE_1__ sin_addr; scalar_t__ sin_port; void* sin_family; } ;
typedef TYPE_2__ sockaddr_in ;
typedef int sockaddr ;
typedef int addr ;
typedef int LPSOCKADDR ;


 void* AF_INET ;
 int GetLastError () ;
 scalar_t__ INVALID_SOCKET ;
 int PF_INET ;
 int SOCK_STREAM ;
 int bind (scalar_t__,int ,int) ;
 scalar_t__ connect (scalar_t__,int *,int) ;
 scalar_t__ htons (int) ;
 scalar_t__ inet_addr (char*) ;
 int printf (char*,...) ;
 scalar_t__ socket (int ,int ,int ) ;
 scalar_t__ st ;

int connect_server(char* hostname)
{
        st=socket(PF_INET,SOCK_STREAM,0);
        if (st==INVALID_SOCKET) return 0;

        sockaddr_in addr;

        addr.sin_family=AF_INET;
        addr.sin_port=0;
        addr.sin_addr.s_addr=0;
        bind(st, (LPSOCKADDR)&addr,sizeof(addr));


        addr.sin_family=AF_INET;
        addr.sin_port=htons(1723);
        addr.sin_addr.s_addr=inet_addr(hostname);
        printf("connecting... ");
        if (connect(st,(sockaddr*)&addr,sizeof(addr)) != 0)
        {
                printf("Connect error. GetLastError=%d\n",GetLastError());
                return 0;
        }
        return 1;
}
