; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_16.c_connect_server.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_16.c_connect_server.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__, i64, i8* }
%struct.TYPE_3__ = type { i64 }

@PF_INET = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@st = common dso_local global i64 0, align 8
@INVALID_SOCKET = common dso_local global i64 0, align 8
@AF_INET = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [15 x i8] c"connecting... \00", align 1
@.str.1 = private unnamed_addr constant [32 x i8] c"Connect error. GetLastError=%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @connect_server(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_4__, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i32, i32* @PF_INET, align 4
  %6 = load i32, i32* @SOCK_STREAM, align 4
  %7 = call i64 @socket(i32 %5, i32 %6, i32 0)
  store i64 %7, i64* @st, align 8
  %8 = load i64, i64* @st, align 8
  %9 = load i64, i64* @INVALID_SOCKET, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %38

12:                                               ; preds = %1
  %13 = load i8*, i8** @AF_INET, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 2
  store i8* %13, i8** %14, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  store i64 0, i64* %15, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  store i64 0, i64* %17, align 8
  %18 = load i64, i64* @st, align 8
  %19 = ptrtoint %struct.TYPE_4__* %4 to i32
  %20 = call i32 @bind(i64 %18, i32 %19, i32 24)
  %21 = load i8*, i8** @AF_INET, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 2
  store i8* %21, i8** %22, align 8
  %23 = call i64 @htons(i32 1723)
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  store i64 %23, i64* %24, align 8
  %25 = load i8*, i8** %3, align 8
  %26 = call i64 @inet_addr(i8* %25)
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  store i64 %26, i64* %28, align 8
  %29 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %30 = load i64, i64* @st, align 8
  %31 = bitcast %struct.TYPE_4__* %4 to i32*
  %32 = call i64 @connect(i64 %30, i32* %31, i32 24)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %12
  %35 = call i32 (...) @GetLastError()
  %36 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), i32 %35)
  store i32 0, i32* %2, align 4
  br label %38

37:                                               ; preds = %12
  store i32 1, i32* %2, align 4
  br label %38

38:                                               ; preds = %37, %34, %11
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local i64 @socket(i32, i32, i32) #1

declare dso_local i32 @bind(i64, i32, i32) #1

declare dso_local i64 @htons(i32) #1

declare dso_local i64 @inet_addr(i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i64 @connect(i64, i32*, i32) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
